# qt_task4_network

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread.cpp  thread.h
